experiment with partials

--- a/templates/index.html.hbs
+++ b/templates/index.html.hbs
@@ -1,4 +1,4 @@
-<html>
-    <head><title>Test</title></head>
-    <body>Hi!</body>
-</html>
+{{> partials/page title="Test" }}
+{{#*inline "page"}}
+  My Content
+{{/inline}}
