--- a/templates/partials/page.html.hbs
+++ b/templates/partials/page.html.hbs
@@ -3,6 +3,6 @@
   <head><title>{{title}}</title></head>
   <body>
     <div><h1>{{title}}</h1></div>
-    {{> page}}
+    {{~> page}}
   </body>
 </html>
