--- a/templates/partials/page.html.hbs
+++ b/templates/partials/page.html.hbs
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <head><title>{{title}}</title></head>
+  <head><title>{{> title}}</title></head>
   <body>
-    <div><h1>{{title}}</h1></div>
+    <div><h1>{{> title}}</h1></div>
     {{~> page}}
   </body>
 </html>
