use configured root URL to put a link into the mail

--- a/templates/confirm_action.eml.hbs
+++ b/templates/confirm_action.eml.hbs
@@ -1,6 +1,7 @@
-{{config.instance_name}} Knotenüberwachung: {{action.node}}
+{{config.instance_name}} Knotenüberwachung
+{{config.instance_name}} Knotenüberwachung: Überwachung von {{action.node}}
 Jemand (hoffentlich du) will deine E-Mail-Adresse {{action.email}} bei der {{config.instance_name}} Knotenüberwachung konfigurieren.
-Wenn du das nicht ausgelöst hast, kannst du diese Mail einfach ignorieren.
+Wenn du das nicht willst, kannst du diese Mail einfach ignorieren.
 
 Ansonsten klicke auf den folgenden Link, um den Knoten {{action.node}} in Zukunft {{#if action.op~}}
 zu überwachen:
