basic impl of adding and deleting nodes

--- a/templates/run_action.html.hbs
+++ b/templates/run_action.html.hbs
@@ -10,5 +10,8 @@
       nicht mehr überwacht.
       {{/if}}
   </p>
+  <p>
+    <a href="{{list_url}}">Zurück zur Knotenliste</a>
+  </p>
 {{~/inline}}
 {{~> partials/page }}
