show nice error when inserting duplicate or deleting nonexisting monitoring entry

--- a/templates/prepare_action.html.hbs
+++ b/templates/prepare_action.html.hbs
@@ -5,11 +5,7 @@
   <p>
     Es wurde eine E-Mail zur Bestätigung an <b>{{action.email}}</b> verschickt.
     Klicke auf den Link in dieser E-Mail, um <b>{{action.node}}</b>
-      {{#if action.op }}
-      zu überwachen.
-      {{else}}
-      nicht mehr zu überwachen.
-      {{/if}}
+    {{#if action.op }}zu überwachen.{{else}}nicht mehr zu überwachen.{{/if}}
   </p>
 {{~/inline}}
-{{~> partials/page }}
+{{~> partials/page}}
