--- a/templates/prepare_action.html.hbs
+++ b/templates/prepare_action.html.hbs
@@ -7,5 +7,8 @@
     Klicke auf den Link in dieser E-Mail, um <b>{{action.node}}</b>
     {{#if action.op }}zu überwachen.{{else}}nicht mehr zu überwachen.{{/if}}
   </p>
+  <p>
+    <a href="{{list_url}}">Zurück zur Knotenliste</a>
+  </p>
 {{~/inline}}
 {{~> partials/page}}
