make config.ui and config.urls available in all templates; serve static files; add a CSS file; make prepare_action POST

--- a/templates/index.html.hbs
+++ b/templates/index.html.hbs
@@ -1,9 +1,9 @@
 {{~#*inline "title"~}}
-  {{config.instance_name}} Knotenüberwachung
+  {{config.ui.instance_name}} Knotenüberwachung
 {{~/inline~}}
 {{~#*inline "page"}}
 <p>
-  Willkommen bei der <b>{{config.instance_name}} Knotenüberwachung</b>!
+  Willkommen bei der <b>{{config.ui.instance_name}} Knotenüberwachung</b>!
   Dieser Dienst überwach kontinuierlich den Status aller Knoten.
   Du kannst dich registrieren, um per E-Mail über Statusänderungen informiert zu werden, zum Beispiel wenn ein Knoten offline geht.
 </p>
