--- a/templates/partials/page.html.hbs
+++ b/templates/partials/page.html.hbs
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
-  <head><title>{{> title}}</title></head>
+  <head>
+    <title>{{> title}}</title>
+    <link rel="stylesheet" href="{{config.urls.root}}static/style.css">
+  </head>
   <body>
     <div><h1>{{> title}}</h1></div>
     {{~> page}}
