--- a/templates/prepare_action.html.hbs
+++ b/templates/prepare_action.html.hbs
@@ -4,8 +4,8 @@
 {{~#*inline "page"}}
   <p>
     Es wurde eine E-Mail zur Bestätigung an <b>{{action.email}}</b> verschickt.
-    Klicke auf den Link in dieser E-Mail, um <b>{{action.node}}</b>
-    {{#if action.op }}zu überwachen.{{else}}nicht mehr zu überwachen.{{/if}}
+    Klicke auf den Link in dieser E-Mail, um <b>{{action.node}}
+    {{#if action.op }}zu überwachen{{else}}nicht mehr zu überwachen{{/if}}</b>.
   </p>
   <p>
     <a href="{{list_url}}">Zurück zur Knotenliste</a>
