implement first version of the cron job
not yet tested though

--- a/templates/confirm_action.eml.hbs
+++ b/templates/confirm_action.eml.hbs
@@ -1,3 +1,4 @@
+# First line is comment, second line user-visible From, third line Subject, the rest the email body.
 {{{config.ui.instance_name}}} Knotenüberwachung
 {{{config.ui.instance_name}}} Knotenüberwachung: Überwachung von {{{action.node}}}
 Jemand (hoffentlich du) will deine E-Mail-Adresse {{{action.email}}} bei der {{{config.ui.instance_name}}} Knotenüberwachung konfigurieren.
