show node name and state in node list

--- a/static/style.css
+++ b/static/style.css
@@ -6,3 +6,11 @@ input[type=submit].link {
     text-decoration: underline;
     cursor: pointer;
 }
+
+.node .online {
+    color: green;
+}
+
+.node .offline, .node .gone {
+    color: red;
+}
