--- a/templates/confirm_action.eml.hbs
+++ b/templates/confirm_action.eml.hbs
@@ -4,7 +4,7 @@
 Jemand (hoffentlich du) will deine E-Mail-Adresse {{{action.email}}} bei der {{{config.ui.instance_name}}} Knotenüberwachung konfigurieren.
 Wenn du das nicht willst, kannst du diese Mail einfach ignorieren.
 
-Klicke auf den folgenden Link, um den Knoten {{{action.node}}} in Zukunft {{#if action.op~}}
+Andernfalls, klicke auf den folgenden Link, um den Knoten {{{action.node}}} in Zukunft {{#if action.op~}}
 zu überwachen:
 {{~else~}}
 nicht mehr zu überwachen:
