--- a/templates/notification.hbs
+++ b/templates/notification.hbs
@@ -1,4 +1,5 @@
 # First line is comment, second line user-visible From, third line Subject, the rest the email body.
 {{{config.ui.instance_name}}} Knotenüberwachung
 {{{config.ui.instance_name}}} Knotenüberwachung: {{{node.name}}} ist {{#if node.online}}wieder online{{else}}OFFLINE{{/if}}
+Dies ist eine Meldung von der {{{config.ui.instance_name}}} Knotenüberwachung:
 {{{node.name}}} ({{{id}}}) ist {{#if node.online}}wieder online{{else}}OFFLINE{{/if}}.
