don't import dsl::*; check if a node ID exists before adding it

--- a/templates/list.html.hbs
+++ b/templates/list.html.hbs
@@ -2,7 +2,7 @@
   Knotenliste für {{form.email}}
 {{~/inline~}}
 {{~#*inline "page"}}
-  {{#each nodes}}
+  {{#each watched_nodes}}
   <div>
     <form method="post" action="prepare_action">
       <span class="node">
