add data protection information to confirmation email

--- a/templates/confirm_action.eml.hbs
+++ b/templates/confirm_action.eml.hbs
@@ -9,4 +9,9 @@ zu überwachen:
 {{~else~}}
 nicht mehr zu überwachen:
 {{~/if}}
-{{{url}}}
+{{{action_url}}}
+
+Datenschutzhinweis:
+Um dir Benachrichtigungen per E-Mail zu schicken, speichern wir deine E-Mail-Adresse und die von dir überwachten Knoten.
+Du kannst diese jederzeit löschen, indem du unter {{{list_url}}} alle Knoten von der Überwachung entfernst.
+Außerdem kann jeder, der deine E-Mail-Adresse kennt, via {{{config.urls.root}}} die Liste der von dir überwachten Knoten einsehen.
