rename node ID column to id; offer to add node by selecting name from a list

--- a/templates/notification.eml.hbs
+++ b/templates/notification.eml.hbs
@@ -2,4 +2,4 @@
 {{{config.ui.instance_name}}} Knotenüberwachung
 {{{config.ui.instance_name}}} Knotenüberwachung: {{{node.name}}} ist {{#if node.online}}wieder online{{else}}OFFLINE{{/if}}
 Dies ist eine Meldung von der {{{config.ui.instance_name}}} Knotenüberwachung:
-{{{node.name}}} ({{{id}}}) ist {{#if node.online}}wieder online{{else}}OFFLINE{{/if}}.
+{{{node.name}}} ({{{node.id}}}) ist {{#if node.online}}wieder online{{else}}OFFLINE{{/if}}.
