--- a/templates/list.html.hbs
+++ b/templates/list.html.hbs
@@ -7,19 +7,19 @@
     <form method="post" action="prepare_action">
       <span class="node">
       {{# if this[1] }}
-        <b>{{this[1].name}}</b> ({{this[1].node}}):
+        <b>{{this[1].name}}</b> ({{this[1].id}}):
         {{# if this[1].online }}
             <span class="online">online</span>
         {{else}}
             <span class="offline">offline</span>
         {{/if}}
-      {{else}}
-        <i>{{this[0].node}}</i>: <span class="gone">verschwunden</span>
+      {{else~}}
+        <i>?</i> ({{this[0].id}}): <span class="gone">verschwunden</span>
       {{/if}}
       </span>
       <input type="hidden" name="email" value="{{this[0].email}}">
       <input type="hidden" name="op" value="remove">
-      <input type="hidden" name="node" value="{{this[0].node}}">
+      <input type="hidden" name="node" value="{{this[0].id}}">
       <input type="submit" value="[x]" class="link">
     </form>
   </div>
@@ -31,7 +31,18 @@
   <form method="post" action="prepare_action">
     <input type="hidden" name="email" value="{{form.email}}">
     <input type="hidden" name="op" value="add">
-    Knoten ID: <input type="text" name="node">
+    Knoten-ID manuell eingeben: <input type="text" name="node">
+    <input type="submit" value="Hinzufügen">
+  </form>
+  <form method="post" action="prepare_action">
+    <input type="hidden" name="email" value="{{form.email}}">
+    <input type="hidden" name="op" value="add">
+    Knotenname aus Liste auswählen:
+    <select name="node">
+      {{#each all_nodes}}
+        <option value="{{this.id}}">{{this.name}} ({{this.id}})</option>
+      {{/each}}
+    </select>
     <input type="submit" value="Hinzufügen">
   </form>
 {{~/inline}}
