notification mail: include link to settings

--- a/templates/notification.eml.hbs
+++ b/templates/notification.eml.hbs
@@ -3,3 +3,5 @@
 {{{config.ui.instance_name}}} Knotenüberwachung: {{{node.name}}} ist {{#if node.online}}wieder online{{else}}OFFLINE{{/if}}
 Dies ist eine Meldung von der {{{config.ui.instance_name}}} Knotenüberwachung:
 {{{node.name}}} ({{{node.id}}}) ist {{#if node.online}}wieder online{{else}}OFFLINE{{/if}}.
+
+Du kannst die Überwachung unter {{{list_url}}} konfigurieren.
