enhance start page

--- a/templates/index.html.hbs
+++ b/templates/index.html.hbs
@@ -21,11 +21,12 @@
 {{~#*inline "page"}}
 <p>
   Willkommen bei der <b>{{config.ui.instance_name}} Knotenüberwachung</b>!
-  Dieser Dienst überwach kontinuierlich den Status aller Knoten.
+  Dieser Dienst überwacht kontinuierlich den Status aller Knoten.
   Du kannst dich registrieren, um per E-Mail über Statusänderungen informiert zu werden, zum Beispiel wenn ein Knoten offline geht.
 </p>
 <form method="get" action="list">
   E-Mail-Adresse: <input type="text" name="email"><br>
+  <br>
   <input type="submit" value="Knoten überwachen">
 </form>
 {{~/inline}}
