--- a/templates/index.html.hbs
+++ b/templates/index.html.hbs
@@ -25,9 +25,7 @@
   Du kannst dich registrieren, um per E-Mail über Statusänderungen informiert zu werden, zum Beispiel wenn ein Knoten offline geht.
 </p>
 <form method="get" action="list">
-  E-Mail-Adresse: <input type="text" name="email"><br>
-  <br>
-  <input type="submit" value="Knoten überwachen">
+  E-Mail-Adresse: <input type="text" name="email">&nbsp;&nbsp;<input type="submit" value="Knoten überwachen">
 </form>
 {{~/inline}}
 {{~> partials/page }}
