--- a/templates/list.html.hbs
+++ b/templates/list.html.hbs
@@ -48,7 +48,7 @@
   <form method="post" action="prepare_action">
     <input type="hidden" name="email" value="{{form.email}}">
     <input type="hidden" name="op" value="add">
-    Knoten-ID manuell eingeben: <input type="text" name="node">
+    <label for="node">Knoten-ID manuell eingeben:</label> <input type="text" name="node" id="node">
     <input type="submit" value="Hinzufügen">
   </form>
   <br>
