--- a/templates/partials/page.html.hbs
+++ b/templates/partials/page.html.hbs
@@ -22,7 +22,8 @@
     <link rel="stylesheet" href="{{config.urls.root}}static/style.css">
   </head>
   <body>
-    <div><h1>{{> title}}</h1></div>
+    <div id="title"><h1>{{> title}}</h1></div>
     {{~> page}}
+    <div id="footer">This site is running <a href="https://github.com/freifunk-saar/ff-node-monitor">ff-node-monitor</a></div>
   </body>
 </html>
