--- a/templates/partials/page.html.hbs
+++ b/templates/partials/page.html.hbs
@@ -24,6 +24,6 @@
   <body>
     <div id="title"><h1>{{> title}}</h1></div>
     {{~> page}}
-    <div id="footer">This site is running <a href="https://github.com/freifunk-saar/ff-node-monitor">ff-node-monitor</a>, which is free and open software.</div>
+    <div id="footer">This site is running <a href="https://github.com/freifunk-saar/ff-node-monitor">ff-node-monitor</a>, which is free and open source software.</div>
   </body>
 </html>
