complain about non-existing node already when sending the action confirmation; show human-readable node name during action confirmation
Fixes #25

--- a/templates/run_action.html.hbs
+++ b/templates/run_action.html.hbs
@@ -26,7 +26,7 @@
   {{else}}
     <b>{{action.node}}</b> wurde
     {{#if action.op}}schon{{else}}nicht{{/if}}
-    von <b>{{action.email}}</b> überwacht{{#if action.op}}, oder es gibt keinen Knoten mit dieser ID{{/if}}.
+    von <b>{{action.email}}</b> überwacht{{#if action.op}}{{/if}}.
   {{/if}}
   </p>
   <p>
