--- a/templates/prepare_action_error.html.hbs
+++ b/templates/prepare_action_error.html.hbs
@@ -16,16 +16,13 @@
 //  along with this program.  If not, see <https://www.gnu.org/licenses/>.
 }}
 {{~#*inline "title"~}}
-  Knotenüberwachung für {{action.email}}
+  Fehler
 {{~/inline~}}
 {{~#*inline "page"}}
-  <p>
-    Es wurde eine E-Mail zur Bestätigung an <b>{{action.email}}</b> verschickt.
-    Klicke auf den Link in dieser E-Mail, um <b>{{node_name}}</b> ({{action.node}})
-    <b>{{#if action.op }}zu überwachen{{else}}nicht mehr zu überwachen{{/if}}</b>.
-  </p>
+  <p>Es ist ein Fehler aufgetreten:
+  Der angegebene Knoten <b>{{{action.node}}}</b> existiert nicht und kann daher nicht überwacht werden.</p>
   <p>
     <a href="{{list_url}}">Zurück zur Knotenliste</a>
   </p>
 {{~/inline}}
-{{~> partials/page}}
+{{~> partials/page }}
