make 'Knotenüberwachung' configurable

--- a/templates/index.html.hbs
+++ b/templates/index.html.hbs
@@ -16,11 +16,11 @@
 //  along with this program.  If not, see <https://www.gnu.org/licenses/>.
 }}
 {{~#*inline "title"~}}
-  {{config.ui.instance_name}} Knotenüberwachung
+  {{config.ui.instance_name}}
 {{~/inline~}}
 {{~#*inline "page"}}
 <p>
-  Willkommen bei der <b>{{config.ui.instance_name}} Knotenüberwachung</b>!
+  Willkommen bei {{config.ui.instance_article_dative}} <b>{{config.ui.instance_name}}</b>!
   Dieser Dienst überwacht kontinuierlich den Status aller Knoten.
   Du kannst dich registrieren, um per E-Mail über Statusänderungen informiert zu werden, zum Beispiel wenn ein Knoten offline geht.
 </p>
