--- a/templates/confirm_action.eml.hbs
+++ b/templates/confirm_action.eml.hbs
@@ -17,9 +17,9 @@
 
 // First line is user-visible From, second line Subject, the rest the email body.
 }}
-{{{config.ui.instance_name}}} Knotenüberwachung
-{{{config.ui.instance_name}}} Knotenüberwachung: Überwachung von {{{node_name}}} ({{{action.node}}})
-Jemand (hoffentlich du) will deine E-Mail-Adresse {{{action.email}}} bei der {{{config.ui.instance_name}}} Knotenüberwachung konfigurieren.
+{{{config.ui.instance_name}}}
+{{{config.ui.instance_name}}}: Überwachung von {{{node_name}}} ({{{action.node}}})
+Jemand (hoffentlich du) will deine E-Mail-Adresse {{{action.email}}} bei {{config.ui.instance_article_dative}} {{{config.ui.instance_name}}} konfigurieren.
 Wenn du das nicht willst, kannst du diese Mail einfach ignorieren.
 
 Andernfalls, klicke auf den folgenden Link, um den Knoten {{{node_name}}} ({{{action.node}}}) in Zukunft {{#if action.op~}}
