--- a/templates/partials/page.html.hbs
+++ b/templates/partials/page.html.hbs
@@ -19,6 +19,7 @@
 <html>
   <head>
     <title>{{> title}}</title>
+    <link rel="stylesheet" href="{{config.urls.root}}static/chosen-1.8.7/chosen.min.css">
     <link rel="stylesheet" href="{{config.urls.root}}static/style.css">
     {{~# if config.urls.stylesheet }}
     <link rel="stylesheet" href="{{config.urls.stylesheet}}">
