--- a/templates/list.html.hbs
+++ b/templates/list.html.hbs
@@ -99,6 +99,7 @@
       }).change(upd_submit_buttons);
       $("#manual-node").on('input', upd_submit_buttons);
       upd_submit_buttons();
+      console.log("init done");
     });
   </script>
 {{~/inline}}
