--- a/templates/list.html.hbs
+++ b/templates/list.html.hbs
@@ -48,7 +48,7 @@
   <div class="formgrid">
     <div class="fieldgrid">
       <div>Knoten-ID manuell eingeben:</div>
-      <input type="text" name="node" form="manual-form" id="manual-node">
+      <input type="text" name="node" form="manual-form" id="manual-node" style="width:100%;">
     </div>
     <div class="button">
       <form method="post" action="prepare_action" id="manual-form">
