--- a/templates/list.html.hbs
+++ b/templates/list.html.hbs
@@ -46,28 +46,13 @@
 
   <h3>Knoten hinzufügen</h3>
   <div class="formgrid">
-    <div class="fieldgrid">
-      <div>Knoten-ID manuell eingeben:</div>
-      <input type="text" name="node" form="manual-form" id="manual-node" style="width:100%;">
-    </div>
-    <div class="button">
-      <form method="post" action="prepare_action" id="manual-form">
-        <input type="hidden" name="email" value="{{form.email}}">
-        <input type="hidden" name="op" value="add">
-        <input type="submit" id="manual-form-submit" value="Hinzufügen">
-      </form>
-    </div>
-    <div style="grid-column: span 2; padding-top: 1.5em;"></div>
     <div>
-      <div>Knotennamen aus Liste auswählen:</div>
-      <div>
-        <select name="node" id="list-node" form="list-form" style="width:100%;" data-placeholder="Knoten auswählen...">
-          <option disabled selected></option>
-          {{#each all_nodes}}
-            <option value="{{this.id}}">{{this.name}} ({{this.id}})</option>
-          {{/each}}
-        </select>
-      </div>
+      <select name="node" id="list-node" form="list-form" style="width:100%;" data-placeholder="Knoten auswählen...">
+        <option disabled selected></option>
+        {{#each all_nodes}}
+          <option value="{{this.id}}">{{this.name}} ({{this.id}})</option>
+        {{/each}}
+      </select>
     </div>
     <div class="button" style="align-self: end">
       <form method="post" action="prepare_action" id="list-form">
@@ -76,7 +61,7 @@
         <input type="submit" id="list-form-submit" value="Hinzufügen">
       </form>
     </div>
-    <div style="grid-column: span 2">
+    <div style="grid-column: span 2; padding-top: 5pt">
       Wenn dein Knoten gerade neu ist und nocht nicht in der Liste auftaucht, versuche es in ein paar Minuten erneut.
     </div>
   </div>
@@ -86,8 +71,7 @@
     function is_good_str(s) {
       return s != null && s != "";
     }
-    function upd_submit_buttons() {
-      $('#manual-form-submit').prop('disabled', !is_good_str($("#manual-node").val()));
+    function upd_submit_button() {
       $('#list-form-submit').prop('disabled', !is_good_str($("#list-node").val()));
     }
 
@@ -96,9 +80,8 @@
         search_contains: true,
         allow_single_deselect: true,
         no_results_text: "Kein Knoten gefunden für",
-      }).change(upd_submit_buttons);
-      $("#manual-node").on('input', upd_submit_buttons);
-      upd_submit_buttons();
+      }).change(upd_submit_button);
+      upd_submit_button();
       console.log("init done");
     });
   </script>
