automatically focus on email field on load
closes #41

--- a/templates/index.html.hbs
+++ b/templates/index.html.hbs
@@ -28,7 +28,7 @@
   <div class="formgrid">
     <div class="fieldgrid">
       <div>E-Mail-Adresse:</div>
-      <input type="text" name="email">
+      <input type="text" name="email" autofocus>
     </div>
     <div class="button">
       <input type="submit" value="Knoten überwachen">
