--- a/templates/list.html.hbs
+++ b/templates/list.html.hbs
@@ -23,9 +23,9 @@
   <div>
     <form method="post" action="prepare_action">
       <span class="node">
-      {{# if this[1] }}
-        <b>{{this[1].name}}</b> ({{this[1].id}}):
-        {{# if this[1].online }}
+      {{# if this.node }}
+        <b>{{this.node.name}}</b> ({{this.node.id}}):
+        {{# if this.node.online }}
             <span class="online">online</span>
         {{else}}
             <span class="offline">offline</span>
@@ -34,9 +34,9 @@
         <i>?</i> ({{this[0].id}}): <span class="gone">verschwunden</span>
       {{/if}}
       </span>
-      <input type="hidden" name="email" value="{{this[0].email}}">
+      <input type="hidden" name="email" value="{{this.monitor.email}}">
       <input type="hidden" name="op" value="remove">
-      <input type="hidden" name="node" value="{{this[0].id}}">
+      <input type="hidden" name="node" value="{{this.monitor.id}}">
       <input type="submit" value="[x]" class="link">
     </form>
   </div>
