--- a/templates/list.html.hbs
+++ b/templates/list.html.hbs
@@ -16,7 +16,7 @@
 //  along with this program.  If not, see <https://www.gnu.org/licenses/>.
 }}
 {{~#*inline "title"~}}
-  Knotenliste für {{form.email}}
+  Knotenliste für {{email}}
 {{~/inline~}}
 {{~#*inline "page"}}
   {{#each watched_nodes}}
@@ -56,7 +56,7 @@
     </div>
     <div class="button" style="align-self: end">
       <form method="post" action="prepare_action" id="list-form">
-        <input type="hidden" name="email" value="{{form.email}}">
+        <input type="hidden" name="email" value="{{email}}">
         <input type="hidden" name="op" value="add">
         <input type="submit" id="list-form-submit" value="Hinzufügen">
       </form>
