fix list template in strict mode

--- a/templates/list.html.hbs
+++ b/templates/list.html.hbs
@@ -31,7 +31,7 @@
             <span class="offline">offline</span>
         {{/if}}
       {{else~}}
-        <i>?</i> ({{this[0].id}}): <span class="gone">verschwunden</span>
+        <i>?</i> ({{this.monitor.id}}): <span class="gone">verschwunden</span>
       {{/if}}
       </span>
       <input type="hidden" name="email" value="{{this.monitor.email}}">
