Formuliere die verwirrende Satzeinleitung beim Bestätigungslink besser

--- a/templates/confirm_action.eml.hbs
+++ b/templates/confirm_action.eml.hbs
@@ -22,11 +22,11 @@
 Jemand (hoffentlich du) will deine E-Mail-Adresse {{{action.email}}} bei {{config.ui.instance_article_dative}} {{{config.ui.instance_name}}} konfigurieren.
 Wenn du das nicht willst, kannst du diese Mail einfach ignorieren.
 
-Andernfalls, klicke auf den folgenden Link, um den Knoten {{{node_name}}} ({{{action.node}}}) in Zukunft {{#if action.op~}}
-zu überwachen:
+Um den Knoten {{{node_name}}} ({{{action.node}}}) in Zukunft {{#if action.op~}}
+zu überwachen
 {{~else~}}
-nicht mehr zu überwachen:
-{{~/if}}
+nicht mehr zu überwachen
+{{~/if}}, klicke auf den folgenden Link:
 {{{action_url}}}
 
 Datenschutzhinweis:
